--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+chrono = "0.4"
+aes = "0.7"
+block-modes = "0.8"
+rand = "0.8"
+tokio = { version = "1", features = ["full"] }
+aws-config = "0.57"
+aws-sdk-s3 = "0.27.0"
+dotenv = "0.15"
+config = "0.13"
+serde = { version = "1.0", features = ["derive"] }
