--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,8 +9,9 @@ aes = "0.7"
 block-modes = "0.8"
 rand = "0.8"
 tokio = { version = "1", features = ["full"] }
-aws-config = "0.57"
+aws-config = "0.57.0"
 aws-sdk-s3 = "0.27.0"
+aws-types = "0.17.0"
 dotenv = "0.15"
 config = "0.13"
 serde = { version = "1.0", features = ["derive"] }
